Meuillon typo corrections

--- a/_keywords/excerpts/d0326.md
+++ b/_keywords/excerpts/d0326.md
@@ -4,7 +4,7 @@ Two free Black women, Genoveva Junon and Maria Juana, arbitrate the sale and pos
 
 [Transcription](#transcription-(Spanish,-diplomatic))  
 [Translation](#translation-(English,-modern))  
-[Notes](#notes
+[Notes](#notes)
 
 ## Transcription (Spanish, diplomatic)  
 
