--- a/_keywords/excerpts/d0329.md
+++ b/_keywords/excerpts/d0329.md
@@ -1,5 +1,5 @@
 # Summary   
-In 1746, Charlotte, an enslaved woman of the Senegal nation, and her two-year old son, Louis, were granted conditional freedom by their enslaver Antoine Meullion, surgeon and resident at Pointe Coupée, for Charlotte's good and agreeable services. Meullion had purchased Charlotte five years earlier from the enslaver Louis Riché. The condition was that they would only enjoy their freedom once Meuillon died or left the country for France. In this document, Meuillion petitions the Governor and Attorney General to confirm Charlotte and Louis's conditional manumission.
+In 1746, Charlotte, an enslaved woman of the Senegal nation, and her two-year old son, Louis, were granted conditional freedom by their enslaver Antoine Meuillion, surgeon and resident at Pointe Coupée, for Charlotte's good and agreeable services. Meuillion had purchased Charlotte five years earlier from the enslaver Louis Riché. The condition was that they would only enjoy their freedom once Meuillon died or left the country for France. In this document, Meuillion petitions the Governor and Attorney General to confirm Charlotte and Louis's conditional manumission.
    
 [Transcription](#transcription-(French,-diplomatic))  
 [Translation](#translation-(English,-modern))  
@@ -26,7 +26,7 @@ f 30
 
 (27145.)
 Au<sup>~</sup>jourdhuy premier fevrier Mil Sept Cent Quarante
-Six Est Comparu En Etudes Mr. Antoine Meullion
+Six Est Comparu En Etudes Mr. Antoine Meuillion
 Chirurgien habitant a La pointe Coupé Lequel___
 Nous a dit et declaré que pour les bons et agreables 
 Services que Luy a rendues et Luy Ren<sup>d</sup> Journellement___ 
@@ -65,7 +65,7 @@ Le Sus<sup>d[it]</sup> jour mois et an +acte
 
 1746
 February 1
-Meullion
+Meuillion
 Freedom granted
 Charlotte *négresse*
 and her son
@@ -77,9 +77,9 @@ f 30
 [Body:]
 
 (27145.)
-Today, [the] first [of] February, one-thousand seven-hundred forty-six, [having] appeared at [the] ministerial office, *Monsieur* Antoine Meullion,surgeon residing at Pointe Coupé[e], who said and declared to us that, for the good and pleasant services that he has received and which he enjoys daily [from]Charlotte, *négresse*, his slave of [the] Senegal nation, who has a child named Louis, around two years old, [he] does not believe he could reward her [enough] even [by] giving her total freedom and the freedom of her child,[that] naturally it is noted, as long as he will stay in this colony, the aforesaid slave will serve him in the capacity of slave, noting that they may only enjoy the aforesaid liberty in the case that he returns to France or that he dies in this colony. Begging the status [of the] case, *Messieurs*, Governors and *commissaires-ordonnateurs*, who finding themselves able might kindly confirm to him the aforesaidliberty, that she [Charlotte] and hers [her dependent] may enjoy it in the same way as all the freed subjects of His Majesty.  
+Today, [the] first [of] February, one-thousand seven-hundred forty-six, [having] appeared at [the] ministerial office, *Monsieur* Antoine Meuillion,surgeon residing at Pointe Coupé[e], who said and declared to us that, for the good and pleasant services that he has received and which he enjoys daily [from]Charlotte, *négresse*, his slave of [the] Senegal nation, who has a child named Louis, around two years old, [he] does not believe he could reward her [enough] even [by] giving her total freedom and the freedom of her child,[that] naturally it is noted, as long as he will stay in this colony, the aforesaid slave will serve him in the capacity of slave, noting that they may only enjoy the aforesaid liberty in the case that he returns to France or that he dies in this colony. Begging the status [of the] case, *Messieurs*, Governors and *commissaires-ordonnateurs*, who finding themselves able might kindly confirm to him the aforesaidliberty, that she [Charlotte] and hers [her dependent] may enjoy it in the same way as all the freed subjects of His Majesty.  
 
 Following the laws and ordinances, declaring also that he acquired the aforementioned slave of Louis Riché,whom he paid in cash/upfront, approximately five years ago, for assurance of everything required of us++ in the present [act] to serve and function for such purposes as reasonable in New Orleans the aforementioned day month and year <sup>+</sup>act
 
-[Signed:] A[ntoine] Meullion
+[Signed:] A[ntoine] Meuillion
 [Signed:] [Nicolas] Henry, Notary [Rubric, Henry]
