--- a/_keywords/excerpts/d0350.md
+++ b/_keywords/excerpts/d0350.md
@@ -1,5 +1,5 @@
 # Summary   
-Last will and testament of enslaver Antoine Meullion includes the manumission of Charlotte and her two children, Louis and Helene. Charlotte and Louis were promised their freedom 21 years earlier when Meullion declared before the Registry of the Superior Council that Charlotte and Louis would be free upon his death or if he left Louisiana for France.  
+Last will and testament of enslaver Antoine Meuillion includes the manumission of Charlotte and her two children, Louis and Helene. Charlotte and Louis were promised their freedom 21 years earlier when Meuillion declared before the Registry of the Superior Council that Charlotte and Louis would be free upon his death or if he left Louisiana for France.  
    
 [Transcription](#transcription-(French,-diplomatic))  
 [Translation](#translation-(English,-modern))  
@@ -26,7 +26,7 @@ EE.
 N<sup>o</sup>> 2032.  
 Aujourdhuÿ Douzieme fevrier mil Sept Cent Soixante  
 et sept Neuf heures du soir a La Requisition au  
-S.r antoine Meullion ancien chirurgien habitant  
+S.r antoine Meuillion ancien chirurgien habitant  
 aux Cannez brulléez de present en sa Maizon située  
 en cette ville nous Notaire Roÿal De La province  
 de La Louisiane Resident a La N<sup>[ouve]lle</sup> orleans sommes  
@@ -187,7 +187,7 @@ testateur et Nous Notaire Soussigné
   
   
 [Signé:] b. Gailllardy  
-[Signé:] A. MeuLLion  
+[Signé:] A. MeuiLLion  
 [Signé:] J. arnou  
 [Signé:] Garic Notaire   
   
@@ -223,7 +223,7 @@ Le Comparant et Nous Notaire
 February 2  
 1767.  
 Will of   
-*Sieur* Meullion   
+*Sieur* Meuillion   
 EE.  
   
 [Signed:] Duvergés  
@@ -233,7 +233,7 @@ EE.
 [Body:]  
   
 No. 2032  
-Today [the] twelfth [of] February seventeen hundred sixty seven, [at] nine o’clock in the evening at the requisition of *Sieur* Antoine Meullion, former surgeon living in Cannes Brulées, at present in his house situated in this city, we—[with the] royal notary of the Province of Louisiana, based in New Orleans— weretransported to the aforementioned house with the witnesses named belowand undersigned, where being taken [away] into a room next to the room overlooking the back, found the said *Sieur* Meuillon in his bed sick of bodybut sound in mind, memory, and reason—as he appeared to us, notary and said witnesses—who had told us that, knowing that there is nothing more certain than death, and fearing the hour [death] calls, he would desire to dispose of his belongings by order of his last will [and testament], and consequently required of us to receive his testament that was dictated to us, as named, as follows:First [and foremost] as a Christian—[a] Catholic, Apostolic and Roman—[he] has given over his soul to God, praying Him, by the merits of the passion of Our LordJesus Christ, that [his soul] be placed among the ranks of the Most Holy, as soon as [his soul] is separated from his body, imploring for the purpose [of] this, intervention by theHoly Virgin, of allthe Saints, and his Patron [Saint], so that through Their [Divine] Will such Grace be accorded to him.  
+Today [the] twelfth [of] February seventeen hundred sixty seven, [at] nine o’clock in the evening at the requisition of *Sieur* Antoine Meuillion, former surgeon living in Cannes Brulées, at present in his house situated in this city, we—[with the] royal notary of the Province of Louisiana, based in New Orleans— weretransported to the aforementioned house with the witnesses named belowand undersigned, where being taken [away] into a room next to the room overlooking the back, found the said *Sieur* Meuillon in his bed sick of bodybut sound in mind, memory, and reason—as he appeared to us, notary and said witnesses—who had told us that, knowing that there is nothing more certain than death, and fearing the hour [death] calls, he would desire to dispose of his belongings by order of his last will [and testament], and consequently required of us to receive his testament that was dictated to us, as named, as follows:First [and foremost] as a Christian—[a] Catholic, Apostolic and Roman—[he] has given over his soul to God, praying Him, by the merits of the passion of Our LordJesus Christ, that [his soul] be placed among the ranks of the Most Holy, as soon as [his soul] is separated from his body, imploring for the purpose [of] this, intervention by theHoly Virgin, of allthe Saints, and his Patron [Saint], so that through Their [Divine] Will such Grace be accorded to him.  
   
 Also, [he] wills and intends to be buried in the cemetery of this parish, or in that of [the one in] which he will die, to have no pomp be made, which we can do if possible, his adding to the directive of his executor of [last] testament will have, [who is] after named.  
   
@@ -284,7 +284,7 @@ month, and year, in the presence of the said *Sieurs* Arnoult and Gaillardy, mer
   
   
 [Signed] B[arthélémy] Gaillardy  
-[Signed:] A[ntoine] Meullion  
+[Signed:] A[ntoine] Meuillion  
 [Signed:] J[ean] Arnoult  
 [Signed:] [Jean-Baptiste] Garic, Notary   
   
