--- a/_keywords/excerpts/d0111.md
+++ b/_keywords/excerpts/d0111.md
@@ -1,8 +1,8 @@
 # Summary
 Naneta St. Marc, negra libre from the Attakapas Post, files suit against Don Salomon Prevot to secure the liberty of her brother, Juan Pedro (alias Bonhomme), after he sustained injuries from Prevot's property during a hurricane. For this reason, Naneta demands that Juan Pedro's just valuation be lowered. The cabildo agrees and commands that freedom papers be issued.
 
-[Transcription](_keywords/excerpts/d0111.md#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes) 
 
 ## Transcription (Spanish, diplomatic)    
@@ -18,7 +18,7 @@ contra D.n Salomon Prevot Sobre que Se
 atime á Juan Pedro aliaz Bonhome Su her  
 mano para Su Livertad_____  
   
-/ </u>N.<sup>o</sup> 145_</u>  
+</u>N.<sup>o</sup> 145_</u>  
   
 Juez el S<sup>or</sup>   
 Gov.or  \}  
