fix internal linking

--- a/_keywords/excerpts/d0175.md
+++ b/_keywords/excerpts/d0175.md
@@ -1,9 +1,8 @@
 # Summary  
 Julia Fortier, a free Black woman, files a freedom suit to compel the fair valuation of Medery, who is enslaved by Antoine Joseph Picquery, and successfully purchases his liberty. This case is an example of *coartación*, a process enslaved people and their kinfolk used to force their owners to provide them with an estimate of their value so they could fund their own self-purchase.  
   
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
   
 ## Transcription (Spanish, diplomatic)  
   
