--- a/_keywords/excerpts/d0176.md
+++ b/_keywords/excerpts/d0176.md
@@ -1,9 +1,8 @@
 # Summary   
 Roseta Montreuill, *parda libre*, had formerly been enslaved by Roberto Montreuil, resident of the City of New Orleans, but had successfully obtained her freedom prior to October of 1793. In these *coartación* proceedings, Roseta goes back for her son Domingo, alias Lubin, *quarterón esclavo*, who is still in the service of her former enslaver. She asks the cabildo for the opportunity to acquire a fair valuation of her son, begging for the judge to also take pity because Lubin is ill. With this taken into consideration, Lubin’s liberty is assured for the price of 425 *pesos* and court costs.
 
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
 
 ## Transcription (Spanish, diplomatic)    
   
