--- a/_keywords/excerpts/d0188.md
+++ b/_keywords/excerpts/d0188.md
@@ -1,8 +1,8 @@
 # Summary   
  In 1725, an unnamed enslaved woman (or girl)–noted only as a *pièce d'Inde*–was transported by *pirogue* from New Orleans by her new enslaver, Sieur de Chavannes, to his plantation near the *Petits Collas* village upriver from the German Coast. Along the way, the woman attempted to flee captivity, jumping into the water at the sight of another *pirogue*, which belonged to Indigenous passers-by whom she presumably knew, perhaps from a previous attempt at *marronage* about one year earlier. Although de Chavannes recaptured the woman, pulling her from the water and bringing her ashore, she successfully escaped into the woods never to be heard from again. As a result, de Chavannes petitioned the Superior Council to release him from his obligation to pay his debts for the sale of the woman and claimed she must have simply been insane to have wanted to escape. The racialized and gendered language used in this document is reminiscent of "drapetomania," a supposed mental illness created in the 19th-century by enslavers wishing to explain why enslaved people would try to seek their freedom.  
    
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)  
    
 ## Transcription (French, diplomatic)  
