--- a/_keywords/excerpts/d0207.md
+++ b/_keywords/excerpts/d0207.md
@@ -2,9 +2,8 @@
 [In Africans in Colonial Louisiana, Dr. Gwendolyn Midlo Hall argues this document offers the first Gulf Coast reference to gumbo (“un Gombeau”) in the archive.ⁱ This is the testimony of Mama “Julie” Comba,ⁱⁱ a fifty year old négresse, an African woman of the Mandinga Nation who lived in the Hospital for the Poor (L'Hôpital des Pauvres) and was enslaved to the Capuchin priests. Mama Comba appears before the French Superior Council in this, her second interrogation, as a result of the arrest of two runaways, the nègre Cézar, and the nègre Louis, called Foy (dit Foÿ). The runaways were caught and accused of murder, but ultimately charged with public drunkenness, theft and firing weapons into the air (no one was killed), and with being fugitives. Mama Comba was interrogated because she hosted a feast that Cézar and Louis were guests at, bringing with them a pig that Louis allegedly stole and that the guests all took part in cooking and eating. The document below is drawn from part of Mama Comba's testimony.  
 ]
   
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
   
 ## Transcription (French, diplomatic)  
   
