--- a/_keywords/excerpts/d0218.md
+++ b/_keywords/excerpts/d0218.md
@@ -1,9 +1,8 @@
 # Summary  
 The shift from French to Spanish dominion brought with it new laws, new customs, and new strategies for enslaved resistance. In 1773, Catharina, enslaved on the Destrehan Plantation, claimed her freedom based on a new system of manumission that came to be called *coartación*.  A few things are important to note in her story. First, throughout the case,  Catharina argued for and defended her right to a lower self-purchase price based on an unspecified infirmity. How the participants reacted to her claims of disability is of interest to anyone studying the history of disability and how it intersects with race, gender, and bondage. Second, the enslaver of note in this case is none other than Étienne de Boré, the man known in the history of United States slavery as the innovator of sugar cultivation in Lower Louisiana. This makes Catharina's case a critical part of the history of the plantation in the United States. Third, Catharina is not arguing just for herself in her battle for freedom; included in her claim is her five-year old daughter, Felicité. Once again, kinship remains the tie that binds and sustains, inspiring resistance, refusals, and challenges that might have been impossible to imagine otherwise.
   
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
   
 ## Transcription (Spanish, diplomatic)  
   
