--- a/_keywords/excerpts/d0254.md
+++ b/_keywords/excerpts/d0254.md
@@ -2,10 +2,9 @@
 The city executioner, a Black man named Louis Congo, comes before the Superior Council of Louisiana to make official notice that he was attacked in his home by three runaway Native slaves. In response, the Attorney General of the King, François Fleuriau, urges the members of the Council to enforce the death penalty for deserters, a power given to them under King Louis XV’s newly decreed Code Noir (1724). The testimony in this case gives us a rare glimpse into the legal structure being formed in French Louisiana and the regime of violence under which enslaved people lived. But it also alerts us to the formation of maroon communities on the outskirts of the city who are willing to take up armed resistance against the colonial elite and their enforcers. Congo is presumed to have received his freedom in 1725 for taking up the duties of executioner, although he is not named so in this document.  
   
   
-[Transcription](#transcription-(French,-diplomatic))   
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
-
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
+  
 ## Transcription (French, diplomatic)  
   
 [feuille 1 recto] [digital 2]    
