--- a/_keywords/excerpts/d0260.md
+++ b/_keywords/excerpts/d0260.md
@@ -1,8 +1,8 @@
 # Summary  
 A woman named Angelica, *negra* enslaved by Antonio Ramis, goes before the *cabildo* at New Orleans to initiate *coartación* proceedings for the valuation of her granddaughter, a four-year old named Maria Antonia, in order to purchase her freedom. The two men appointed by the court to appraise the child, Antonio "Villefranche" Boudousquié and Santiago "Jacques" Tarascon, find her to be worth 175 pesos and 200 pesos, respectively.  
   
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)  
   
 ## Transcription (Spanish, diplomatic)     
