--- a/_keywords/excerpts/d0261.md
+++ b/_keywords/excerpts/d0261.md
@@ -1,9 +1,8 @@
 # Summary   
 Mariana Marcos (*alias* Voisin), *negra libre*, filed a freedom suit to compel the emancipation of her sister, Pelagie, who is enslaved by Pierre Olivier D'Anneville, for the price of her fair valuation. Successful in her suit, Mariana’s sister Pelagie is ordered free by the Spanish *audiencia* at New Orleans. As an example of the *coartación* process, it not only demonstrates the changes that were made to slave law during the Spanish period, but it also highlights the importance of kinship to both enslaved and free people of color in Louisiana.
    
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
    
 ## Transcription (Spanish, diplomatic)  
 
