--- a/_keywords/excerpts/d0263.md
+++ b/_keywords/excerpts/d0263.md
@@ -1,8 +1,8 @@
 # Summary   
 Cecilia, an Afro-Indigenous woman–the daughter of María of the Patouca nation (Plains Apache)–sues Don Juan Bautista Tounoir on behalf of her niece, Naneta, for her freedom. Due to the supposed illegality of the enslavement of Indigenous people under Spanish Dominion, Cecilia’s legal argument begs that her niece be declared free on this basis due to her maternal descent or, failing that this be ordered by the court, that Naneta would still be valuated in order for Cecilia to purchase her freedom under cortación proceedings. However, not only were the laws pertaining to Indian slavery frequently broken or outright ignored in Spanish Louisiana, including by members of the government, Naneta's enslaver, Tounoir, died during the course of the legal proceedings against him.[^i] His executor of estate, Don Pedro Suavé, refuses to grant her freedom outright, arguing that Naneta's value cannot be subtracted from Tounoir's succession inventory. The judge, therefore, orders each party to appoint an appraiser on their behalf to render an estimate of Naneta's value.
 
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes
 
 ## Transcription (Spanish, diplomatic)     
