--- a/_keywords/excerpts/d0281.md
+++ b/_keywords/excerpts/d0281.md
@@ -1,9 +1,8 @@
 # Summary   
 Naneta, *mulata libre*, petitions the Spanish judiciary in a freedom suit for her kin, Maturine, *negra*, enslaved by Alexandre Boré. Not only does Boré refuse to grant Maturine her freedom, he countersues Naneta, claiming that he should not be forced to comply with these *coartación* proceedings. It is his opinion that Maturine has done nothing of value to gain her freedom, nor is she able to be considered worthy of the grace of liberty. Boré further accuses them both of being criminals, while declaring before the court that he, on the other hand, is a good and honorable man.
    
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
    
 ## Transcription (Spanish, diplomatic)  
   
