--- a/_keywords/excerpts/d0286.md
+++ b/_keywords/excerpts/d0286.md
@@ -1,8 +1,8 @@
 # Summary   
 An enslaved man named Pierrot was sold to enslaver Michèl Brosset by Claude Boisson ("*tailladier en cette ville*," tool maker in this city) and his wife, Magdelaine Chenier, who had acquired Pierrot as a *piece d'inde* from the Company of the Indies[^i]. However, Pierrot went missing after having gone maroon. Boisson and Chenier promise to catch Pierrot for Brosset in exchange for cash upon delivery, which they succeed in accomplishing.   
    
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)  
    
 ## Transcription (French, diplomatic)  
