--- a/_keywords/excerpts/d0295.md
+++ b/_keywords/excerpts/d0295.md
@@ -1,8 +1,8 @@
 # Summary  
 In 1726, a Bambara man named Biron arrived in Louisiana from Senegambia on the slave ship Aurora. For the next two years, he frequently resisted his enslavement. When he ran away in 1728, he was pursued by his enslaver, Jean Sougaine, who almost killed him while trying to recapture him.  
   
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)  
   
 ## Transcription (French, diplomatic)
