--- a/_keywords/excerpts/d0297.md
+++ b/_keywords/excerpts/d0297.md
@@ -1,8 +1,8 @@
 # Summary  
 The Attorney General of the King, François Fleuriau, asks the Superior Council to begin criminal proceedings against Biron of the Bambara nation after reading the declaration from Biron’s enslaver of his marronage and armed resistance. Fleuriau cites the increase of Africans in the colony as the result of the slave trade as even more justification for punishing Biron, fearing the loss of control in plantation regions distant from New Orleans.  
   
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
 
 ## Transcription (French, diplomatic)  
   
