--- a/_keywords/excerpts/d0326.md
+++ b/_keywords/excerpts/d0326.md
@@ -2,8 +2,8 @@
 Two free Black women, Genoveva Junon and Maria Juana, arbitrate the sale and possession of legal title to a plot of land, inclusive of thirty feet of building frontage on which merchant stalls can be placed, on *Calle del Arsenal de las Ursulinas* (St. Ursulines Ave.) in the French Quarter. This document gives us insight into the merging of French and Spanish property laws in colonial Louisiana under Spanish dominion, as well as the rights of free people of color under that law.
 
 
-[Transcription](#transcription-(Spanish,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-spanish-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)
 
 ## Transcription (Spanish, diplomatic)  
