--- a/_keywords/excerpts/d0329.md
+++ b/_keywords/excerpts/d0329.md
@@ -1,8 +1,8 @@
 # Summary   
 In 1746, Charlotte, an enslaved woman of the Senegal nation, and her two-year old son, Louis, were granted conditional freedom by their enslaver Antoine Meuillion, surgeon and resident at Pointe Coupée, for Charlotte's good and agreeable services. Meuillion had purchased Charlotte five years earlier from the enslaver Louis Riché. The condition was that they would only enjoy their freedom once Meuillon died or left the country for France. In this document, Meuillion petitions the Governor and Attorney General to confirm Charlotte and Louis's conditional manumission.
    
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
    
 ## Transcription (French, diplomatic)  
 
