--- a/_keywords/excerpts/d0347.md
+++ b/_keywords/excerpts/d0347.md
@@ -1,8 +1,8 @@
 # Summary   
  After her husband was killed fighting in the First Chickasaw War, the Widow Bonvillian goes before the Superior Council to beg leniency. She wishes permission to sell an enslaved man from her late husband's estate so that she may settle debts owed to the Company of the Indies, claiming otherwise that she and her children may not survive. The Council grants her the right to sell this unnamed man, identified solely as "*un nègre*," as long as any proceeds from the sale go to the Company. However, by following the documentary traces of his life in the colonial archive, we are able to recover the name and fate of this man. Unnamed in one document,[^i] he was also misrecorded in the archive as "Pierre" due to a misreading in another document of the phrase "*un nègre pièce d'Inde*."[^ii] Louis (Mouton) was sold to *Sieur* Louis Cheval, resident of 303 Rue Bourbon (present-day location of Arnaud's Restaurant).  
     
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
 [Notes](#notes)  
    
 ## Transcription (French, diplomatic)  
