--- a/_keywords/excerpts/d0350.md
+++ b/_keywords/excerpts/d0350.md
@@ -1,9 +1,8 @@
 # Summary   
 Last will and testament of enslaver Antoine Meuillion includes the manumission of Charlotte and her two children, Louis and Helene. Charlotte and Louis were promised their freedom 21 years earlier when Meuillion declared before the Registry of the Superior Council that Charlotte and Louis would be free upon his death or if he left Louisiana for France.  
    
-[Transcription](#transcription-(French,-diplomatic))  
-[Translation](#translation-(English,-modern))  
-[Notes](#notes)  
+[Transcription](#transcription-french-diplomatic)  
+[Translation](#translation-english-modern)  
    
 ## Transcription (French, diplomatic)  
   
