--- a/_keywords/excerpts/d0296.md
+++ b/_keywords/excerpts/d0296.md
@@ -1,9 +1,8 @@
 # Summary  
 An enslaved African man, Biron of the Bambara nation, is interrogated by the Superior Council for having run away from his enslaver and for resisting his recapture. This record highlights not only the violence of the French system of slavery, but also the limited rights afforded to enslaved people as well as the legal apparatus to enforce that enslavement while it was being developed in Louisiana.  
   
-[Transcription](#transcription-(French,-diplomatic))  
+[Transcription](#transcription-french-diplomatic)  
 [Translation](#translation-(English,-modern))  
-[Notes](#notes)  
   
 ## Transcription (French, diplomatic)  
   
