--- a/_keywords/excerpts/d0263.md
+++ b/_keywords/excerpts/d0263.md
@@ -3,7 +3,7 @@ Cecilia, an Afro-Indigenous woman–the daughter of María of the Patouca nation
 
 [Transcription](#transcription-spanish-diplomatic)  
 [Translation](#translation-english-modern)  
-[Notes](#notes
+[Notes](#notes)
 
 ## Transcription (Spanish, diplomatic)     
   
