--- a/_keywords/excerpts/d0207.md
+++ b/_keywords/excerpts/d0207.md
@@ -1,9 +1,9 @@
 # Summary  
-[In Africans in Colonial Louisiana, Dr. Gwendolyn Midlo Hall argues this document offers the first Gulf Coast reference to gumbo (“un Gombeau”) in the archive.ⁱ This is the testimony of Mama “Julie” Comba,ⁱⁱ a fifty year old négresse, an African woman of the Mandinga Nation who lived in the Hospital for the Poor (L'Hôpital des Pauvres) and was enslaved to the Capuchin priests. Mama Comba appears before the French Superior Council in this, her second interrogation, as a result of the arrest of two runaways, the nègre Cézar, and the nègre Louis, called Foy (dit Foÿ). The runaways were caught and accused of murder, but ultimately charged with public drunkenness, theft and firing weapons into the air (no one was killed), and with being fugitives. Mama Comba was interrogated because she hosted a feast that Cézar and Louis were guests at, bringing with them a pig that Louis allegedly stole and that the guests all took part in cooking and eating. The document below is drawn from part of Mama Comba's testimony.  
-]
+In Africans in Colonial Louisiana, Dr. Gwendolyn Midlo Hall argues this document offers the first Gulf Coast reference to gumbo (“un Gombeau”) in the archive.[^i] This is the testimony of Mama “Julie” Comba,[^ii] a fifty year old négresse, an African woman of the Mandinga Nation who lived in the Hospital for the Poor (L'Hôpital des Pauvres) and was enslaved to the Capuchin priests. Mama Comba appears before the French Superior Council in this, her second interrogation, as a result of the arrest of two runaways, the nègre Cézar, and the nègre Louis, called Foy (dit Foÿ). The runaways were caught and accused of murder, but ultimately charged with public drunkenness, theft and firing weapons into the air (no one was killed), and with being fugitives. Mama Comba was interrogated because she hosted a feast that Cézar and Louis were guests at, bringing with them a pig that Louis allegedly stole and that the guests all took part in cooking and eating. The document below is drawn from part of Mama Comba's testimony.  
   
 [Transcription](#transcription-french-diplomatic)  
 [Translation](#translation-english-modern)  
+[Notes](#notes)
   
 ## Transcription (French, diplomatic)  
   
@@ -161,6 +161,11 @@ Et ÿ a persisté et Na Sçu Signer
 [Signé:] Fazende     [Signé:] Garic, Greffier  
       
 ## Translation (English, modern)  
+## Notes    
+  
+[^i]: Employing *pièce d’Inde* reduced Africans to a measurement of commercial exchange, in an attempt to erase their humanity. In September 1721, French officials established the exchange rate of *pièce d’Inde* in Louisiana at 660 *livres*, the price at which this unnamed woman was purchased in 1722 or 1723. B. F. French, *Historical Collections of Louisiana and Florida* (New York: J. Sabin & Sons, 1869), 3: 101-3. For more on *pièce d’Inde* and gender, see Jessica Marie Johnson, *Wicked Flesh: Black Women, Intimacy, and Freedom in the Atlantic World* (Philadelphia: University of Pennsylvania Press, 2020), 77-120.    
+     
+[^ii]: The name of the community whom the French called the *Petits Collas*–a smaller band of the Acolapissa–signals that the French recognized this Native nation as a distinct polity, one of the *Petite Nations*. For more on the *Petite Nations* and the diversity of strategies they pursued in the Gulf South to shape French colonization, see Elizabeth N. Ellis, *The Great Power of Small Nations: Indigenous Diplomacy in the Gulf South* (Philadelphia: University of Pennsylvania Press, 2022). For a reference to the home of this enslaved woman and de Chavannes in a colonial journal, see “Journal of Diron D’Artaguiette, Inspector General of Louisiana, 1722-1723,” in Newton D. Mereness, ed., *Travels in the American Colonies* (New York: Macmillan Company, 1916), 41-42, [https://www.loc.gov/item/16009410/](https://www.loc.gov/item/16009410/).
     
 [page # 1] [digital 3]  
     
@@ -228,3 +233,9 @@ Questioned if she knew that the *nègre*, Louis, was often sleeping at the  home
    
    
 [Signed:] Fazende     [Signed:] Garic, Notary  
+  
+## Notes    
+  
+[^i]: Gwendolyn Midlo Hall, Africans in *Colonial Louisiana: The Development of Afro-Creole Culture in the Eighteenth Century* (Baton Rouge: Louisiana State University Press, 1992).See also, Dominique Rogers, *Voix d'esclaves: Antilles, Guyane et Louisiane Françaises, XVIIIE-XIXE siécles* (Paris: Éditions Karthala, 2015).  
+  
+[^ii]: Mama Comba's name evokes the Senegambian goddess who emerged during the slave trade,  Mame Coumba Bang, or Maam Kumba Castel, and rules the waters of Saint-Louis and Gorée, respectively. She and other Vodun deities are retained in the pantheon of Louisiana Voodoo. For more on West African religion and culture in Louisiana, see Hall, *Africans in Colonial Louisiana*; Ibrahima Seck, *Bouki Fait Gombo: A History of the Slave Community of Habitation Haydel (Whitney Plantation) Louisiana, 1750-1860* (New Orleans: University of New Orleans Press, 2014); Jessica Marie Johnson, *Wicked Flesh: Black Women, Intimacy, and Freedom in the Atlantic World* (Philadelphia: University of Pennsylvania Press, 2022).  
